# weather_forecating_predictionmarkets

./: .gitignore  README.md  pom.xml
common/: pom.xml
docs/: README.md  architecture.md  runbook.md  schema.md  station-mapping.md  time-semantics.md
epics_and_jiras/: _digest_headings_and_bullets.txt
ml/: README.md  baseline_runner.py  nam_gfs_sweep_01_base.py  pyproject.toml  run_mos_experiment_suite.py  run_train_calibration_2025.py
ml/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
ml/catboost_info/learn/: events.out.tfevents
ml/configs/: train_kalshi_default.yaml  train_mean_sigma.yaml  train_mean_sigma_catboost.yaml  train_mean_sigma_lgbm.yaml  train_mean_sigma_lgbm_cal2025.yaml  train_mean_sigma_xgb.yaml  train_nam_gfs_sweep_01_base.yaml  train_nam_gfs_sweep_01_base_kmia_tod.yaml
ml/src/weather_ml/: __init__.py  artifacts.py  baselines.py  calibration.py  config.py  dataset.py  db.py  derived_features.py  distribution.py  feature_sweep.py  features.py  global_normal_calibration.py  hmm_utils.py  metrics.py  models_mean.py  models_sigma.py  predict.py  report.py  splits.py  strategy_calibration.py  time_feature_library.py  time_feature_sweep.py  time_sweep_calibration.py  train.py  utils_seed.py  validate.py
ml/src/weather_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml/tests/: test_dataset.py  test_dataset_snapshot.py  test_derived_features.py  test_distribution.py  test_feature_sweep.py  test_features.py  test_global_normal_calibration.py  test_placeholder.py  test_splits.py  test_validate.py
(+2063 files in other folders)
