[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-ml"
version = "0.1.0"
description = "Weather ML training pipeline for Kalshi."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "SQLAlchemy==2.0.32",
  "PyMySQL==1.1.1",
  "scikit-learn==1.5.1",
  "matplotlib==3.9.2",
  "PyYAML==6.0.2",
  "joblib==1.4.2",
  "pytest==8.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]